--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -50,12 +50,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Price"
+            android:inputType="numberDecimal"
             android:id="@+id/productPrice" />
         <EditText
             android:layout_below="@+id/productPrice"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Quantity"
+            android:inputType="number"
             android:layout_marginTop="9dp"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
