--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -33,15 +33,15 @@
 
         </androidx.cardview.widget.CardView>
 
-        <EditText
-            android:layout_marginTop="9dp"
+        <Spinner
             android:layout_below="@+id/card_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Product Name"
+            android:entries="@array/Products"
+            android:id="@+id/productName"
+            android:layout_marginTop="9dp"
             android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:id="@+id/productName" />
+            android:layout_marginEnd="10dp"/>
         <EditText
             android:layout_marginTop="9dp"
             android:layout_marginStart="10dp"
