--- a/app/src/main/res/layout/single_farmer_product.xml
+++ b/app/src/main/res/layout/single_farmer_product.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/SingleItem"
     android:layout_margin="15dp">
-
-
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
@@ -16,23 +14,153 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1">
-            <ImageView
-                android:layout_margin="10dp"
+            <androidx.cardview.widget.CardView
+                android:elevation="30dp"
+                app:cardCornerRadius="5dp"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/productImageSingle"/>
+                android:layout_height="match_parent">
+
+                <ImageView
+                    android:layout_margin="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/productImageSingle"/>
+            </androidx.cardview.widget.CardView>
         </LinearLayout>
         <LinearLayout
+            android:layout_margin="8dp"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2"
-            android:orientation="vertical">
-            <TextView
+            android:orientation="horizontal">
+            <LinearLayout
+                android:layout_weight="0.4"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/productNameSingle"/>
+                android:orientation="vertical"
+                android:layout_height="match_parent">
+                <LinearLayout
+                    android:layout_marginTop="10dp"
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:id="@+id/text1"
+                        android:text="Product Name:"
+                        android:textColor="#000000"
+                        android:textStyle="bold"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                    <TextView
+                        android:id="@+id/productNameSingle"
+                        android:layout_marginStart="5dp"
+                        android:text="Name"
+                        android:textColor="#524B4B"
+                        android:textStyle="normal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_marginTop="10dp"
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:id="@+id/text2"
+                        android:text="Price :"
+                        android:textColor="#000000"
+                        android:textStyle="bold"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                    <TextView
+                        android:layout_marginStart="5dp"
+                        android:id="@+id/price"
+                        android:text="Price"
+                        android:textColor="#524B4B"
+                        android:textStyle="normal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_marginTop="10dp"
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:id="@+id/text3"
+                        android:text="Quantity :"
+                        android:textColor="#000000"
+                        android:textStyle="bold"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                    <TextView
+                        android:id="@+id/quantity"
+                        android:text="50 KG"
+                        android:layout_marginStart="5dp"
+                        android:textColor="#524B4B"
+                        android:textStyle="normal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_marginTop="10dp"
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:id="@+id/text4"
+                        android:text="Product Name:"
+                        android:textColor="#000000"
+                        android:textStyle="bold"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                    <TextView
+                        android:id="@+id/Delivery"
+                        android:text="NAME"
+                        android:layout_marginStart="5dp"
+                        android:textColor="#524B4B"
+                        android:textStyle="normal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+
+
+            </LinearLayout>
+
+            <RelativeLayout
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+
+                <ImageView
+                    android:layout_alignParentEnd="true"
+                    android:id="@+id/myImageView"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:src="@drawable/round_background_order_product_single" />
+
+                <TextView
+                    android:id="@+id/myImageViewText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignLeft="@+id/myImageView"
+                    android:layout_alignTop="@+id/myImageView"
+                    android:layout_alignRight="@+id/myImageView"
+                    android:layout_alignBottom="@+id/myImageView"
+                    android:layout_margin="1dp"
+                    android:gravity="center"
+                    android:text="1"
+                    android:textSize="15sp"
+                    android:textStyle="bold"
+                    android:textColor="#FFFFFF" />
+            </RelativeLayout>
+
+
+
         </LinearLayout>
-
-
     </LinearLayout>
 </androidx.cardview.widget.CardView>
