--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -44,6 +44,7 @@
             android:layout_height="match_parent">
 
             <RelativeLayout
+                android:layout_marginBottom="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -112,6 +113,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Service Charge"
+                    android:visibility="gone"
                     android:id="@+id/productDeliveryCharge"/>
                 <Spinner
                     android:layout_below="@+id/productDeliveryCharge"
