--- a/app/src/main/res/layout/single_farmer_product.xml
+++ b/app/src/main/res/layout/single_farmer_product.xml
@@ -21,6 +21,7 @@
                 android:layout_height="match_parent">
 
                 <ImageView
+                    android:transitionName="Windows"
                     android:layout_margin="10dp"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
