--- a/app/src/main/res/layout/single_farmer_product.xml
+++ b/app/src/main/res/layout/single_farmer_product.xml
@@ -112,14 +112,14 @@
                     android:layout_height="wrap_content">
                     <TextView
                         android:id="@+id/text4"
-                        android:text="Product Name:"
+                        android:text="Delivery Charge:"
                         android:textColor="#000000"
                         android:textStyle="bold"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
 
                     <TextView
-                        android:id="@+id/Delivery"
+                        android:id="@+id/deliveryCharge"
                         android:text="NAME"
                         android:layout_marginStart="5dp"
                         android:textColor="#524B4B"
