--- a/app/src/main/res/layout/single_farmer_product.xml
+++ b/app/src/main/res/layout/single_farmer_product.xml
@@ -21,6 +21,7 @@
                 android:layout_height="match_parent">
 
                 <ImageView
+                    android:background="@drawable/recatngular_border"
                     android:transitionName="Windows"
                     android:layout_margin="10dp"
                     android:layout_width="match_parent"
@@ -29,6 +30,7 @@
             </androidx.cardview.widget.CardView>
         </LinearLayout>
         <LinearLayout
+            android:background="@drawable/recatngular_border"
             android:layout_margin="8dp"
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -36,6 +38,7 @@
             android:orientation="horizontal">
             <LinearLayout
                 android:layout_weight="0.4"
+                android:layout_margin="5dp"
                 android:layout_width="match_parent"
                 android:orientation="vertical"
                 android:layout_height="match_parent">
@@ -132,6 +135,7 @@
             </LinearLayout>
 
             <RelativeLayout
+                android:layout_margin="8dp"
                 android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
