--- a/app/src/main/res/layout/single_farmer_product.xml
+++ b/app/src/main/res/layout/single_farmer_product.xml
@@ -136,6 +136,7 @@
 
             <RelativeLayout
                 android:layout_margin="8dp"
+                android:id="@+id/pendingRequestsCountHolder"
                 android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
@@ -149,7 +150,7 @@
                     android:src="@drawable/round_background_order_product_single" />
 
                 <TextView
-                    android:id="@+id/myImageViewText"
+                    android:id="@+id/pendingRequests"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignLeft="@+id/myImageView"
