--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -5,7 +5,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@drawable/farmerappbackground"
     android:layout_height="match_parent">
 
     <RelativeLayout
@@ -17,15 +16,16 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/card_view"
-            android:layout_marginEnd="20dp"
-            android:layout_marginStart="20dp"
             android:layout_marginTop="15dp"
-            android:elevation="15dp"
+            android:elevation="100dp"
             app:cardCornerRadius="10dp"
 
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
+
             <ImageView
+                android:src="@drawable/ic_photo_camera_black_24dp"
                 android:scaleType="fitXY"
                 android:layout_width="match_parent"
                 android:layout_height="350dp"
@@ -34,9 +34,7 @@
 
         </androidx.cardview.widget.CardView>
         <androidx.cardview.widget.CardView
-            android:layout_marginStart="20dp"
             android:layout_marginTop="15dp"
-            android:layout_marginEnd="20dp"
             android:elevation="15dp"
             app:cardCornerRadius="15dp"
             android:layout_below="@+id/card_view"
