--- a/app/src/main/res/layout/activity_order_list.xml
+++ b/app/src/main/res/layout/activity_order_list.xml
@@ -12,51 +12,61 @@
         android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:id="@+id/cardview1"
-           android:layout_margin="20dp"
+           android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
-               android:background="@drawable/recatngular_border"
-               android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:id="@+id/productImage"
                android:transitionName="Windows"/>
+
        </androidx.cardview.widget.CardView>
+
         <androidx.cardview.widget.CardView
             android:layout_below="@+id/cardview1"
             android:layout_width="match_parent"
-            android:layout_margin="20dp"
+            android:layout_marginTop="20dp"
             app:cardCornerRadius="20dp"
             android:id="@+id/cardview2"
             android:layout_height="wrap_content">
+
             <RelativeLayout
                 android:layout_margin="5dp"
-                android:background="@drawable/recatngular_border"
-            android:layout_width="match_parent"
+                android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_alignParentBottom="true">
-            <TextView
+
+                <TextView
                 android:text="Prodct Name"
                 android:layout_margin="7dp"
+                android:textStyle="bold"
+                android:textSize="18sp"
                 android:layout_width="match_parent"
                 android:id="@+id/ProductName"
                 android:layout_height="wrap_content"/>
-            <TextView
+
+                <TextView
                 android:layout_width="match_parent"
                 android:id="@+id/ProductPrice"
                 android:text="Price"
+                android:textSize="18sp"
+                android:textStyle="bold"
                 android:layout_margin="7dp"
                 android:layout_below="@+id/ProductName"
                 android:layout_height="wrap_content"/>
-            <TextView
+
+                <TextView
                 android:text="Amount"
+                android:textStyle="bold"
+                android:textSize="18sp"
                 android:layout_margin="7dp"
                 android:layout_width="match_parent"
                 android:id="@+id/ProductAmount"
                 android:layout_below="@+id/ProductPrice"
                 android:layout_height="wrap_content"/>
+
             <LinearLayout
                 android:layout_below="@+id/ProductAmount"
                 android:layout_width="match_parent"
@@ -84,6 +94,7 @@
         </androidx.cardview.widget.CardView>
 
         <androidx.recyclerview.widget.RecyclerView
+            android:layout_marginTop="10dp"
             android:layout_below="@+id/cardview2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
