--- a/app/src/main/res/layout/single_farmer_product.xml
+++ b/app/src/main/res/layout/single_farmer_product.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/SingleItem"
-    android:layout_margin="15dp">
+    android:layout_marginTop="15dp">
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
@@ -21,16 +21,13 @@
                 android:layout_height="match_parent">
 
                 <ImageView
-                    android:background="@drawable/recatngular_border"
                     android:transitionName="Windows"
-                    android:layout_margin="10dp"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:id="@+id/productImageSingle"/>
             </androidx.cardview.widget.CardView>
         </LinearLayout>
         <LinearLayout
-            android:background="@drawable/recatngular_border"
             android:layout_margin="8dp"
             android:layout_width="0dp"
             android:layout_height="match_parent"
