--- a/app/src/main/res/layout/single_order.xml
+++ b/app/src/main/res/layout/single_order.xml
@@ -14,18 +14,28 @@
         android:layout_width="match_parent"
         android:id="@+id/quantity"
         android:text="Qunatity"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:layout_marginTop="8dp"
         android:layout_height="wrap_content"/>
     <TextView
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:layout_marginTop="8dp"
         android:layout_width="match_parent"
         android:id="@+id/productPay"
         android:text="Product Pay"
         android:layout_height="wrap_content"/>
     <TextView
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:layout_marginTop="8dp"
         android:layout_width="match_parent"
         android:id="@+id/deliverPay"
         android:text="Delivery Pay"
         android:layout_height="wrap_content"/>
     <LinearLayout
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:weightSum="3">
